--- a/.eslintrc
+++ b/.eslintrc
@@ -1,31 +1,26 @@
 {
-    "parser": "@typescript-eslint/parser",
-    "env": {
-      "browser": true,
-      "node": true
-    },
-    "extends": [
-      "eslint:recommended",
-      "plugin:prettier/recommended",
-      "plugin:react-hooks/recommended"
-    ],
-    "plugins": [
-      "@typescript-eslint"
-    ],
-    "rules": {
-      "no-undef": "off"
-    },
-    "settings": {
-      "react": {
-        "version": "detect"
+  "parser": "@typescript-eslint/parser",
+  "env": {
+    "browser": true,
+    "node": true
+  },
+  "extends": ["eslint:recommended", "plugin:prettier/recommended", "plugin:react-hooks/recommended"],
+  "plugins": ["@typescript-eslint"],
+  "rules": {
+    "no-undef": "off"
+  },
+  "settings": {
+    "react": {
+      "version": "detect"
+    }
+  },
+  "ignorePatterns": ["dist/", "node_modules/"],
+  "overrides": [
+    {
+      "files": ["*.ts", "*.tsx"],
+      "rules": {
+        "@typescript-eslint/no-unused-vars": [2, { "args": "none" }]
       }
-    },
-    "overrides": [
-      {
-        "files": ["*.ts", "*.tsx"],
-        "rules": {
-          "@typescript-eslint/no-unused-vars": [2, { "args": "none" }]
-        }
-      }
-    ]
-  }
+    }
+  ]
+}
