--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,26 @@
-# node modules
-node_modules
+# See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
-# env
+# dependencies
+/node_modules
+/.pnp
+.pnp.js
+
+# testing
+/coverage
+
+# production
+/dist
+
+# misc
+.DS_Store
 .env
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
 
-# editor
-.vscode
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+.vscide
+
