--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "webpack 개인 설정",
   "main": "index.js",
   "scripts": {
-    "dev": "cross-env TS_NODE_PROJECT=\"tsconfig-for-webpack-config.json\" webpack serve --env development",
-    "build": "cross-env TS_NODE_PROJECT=\"tsconfig-for-webpack-config.json\" webpack",
+    "dev": "webpack serve --config ./config/webpack.config.dev.js --mode development --env development",
+    "build": "webpack --config ./config/webpack.config.prod.js --mode production --env production",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -19,36 +19,34 @@
   },
   "homepage": "https://github.com/dongwonnn/webpack#readme",
   "dependencies": {
-    "@pmmmwh/react-refresh-webpack-plugin": "^0.5.1",
-    "@types/react": "^17.0.33",
-    "@types/react-dom": "^17.0.10",
-    "cross-env": "^7.0.3",
-    "css-loader": "^6.5.0",
-    "fork-ts-checker-webpack-plugin": "^6.4.0",
-    "global": "^4.4.0",
+    "html-webpack-plugin": "^5.5.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "react-refresh": "^0.10.0",
-    "react-router-dom": "^5.3.0",
-    "style-loader": "^3.3.1",
-    "ts-node": "^10.4.0",
-    "typescript": "^4.4.4",
-    "webpack-cli": "^4.9.1"
+    "react-router-dom": "^6.0.2",
+    "styled-components": "^5.3.3",
+    "styled-reset": "^4.3.4",
+    "ts-loader": "^9.2.6",
+    "webpack": "^5.64.0",
+    "webpack-cli": "^4.9.1",
+    "webpack-dev-server": "^4.4.0"
   },
   "devDependencies": {
     "@babel/core": "^7.16.0",
     "@babel/preset-env": "^7.16.0",
     "@babel/preset-react": "^7.16.0",
     "@babel/preset-typescript": "^7.16.0",
-    "@types/node": "^16.11.6",
-    "@types/webpack": "^5.28.0",
-    "@types/webpack-dev-server": "^4.3.1",
+    "@svgr/webpack": "^5.5.0",
+    "@types/react": "^17.0.34",
+    "@types/react-dom": "^17.0.11",
+    "@types/styled-components": "^5.1.15",
+    "@typescript-eslint/eslint-plugin": "^5.3.1",
+    "@typescript-eslint/parser": "^5.3.1",
     "babel-loader": "^8.2.3",
-    "eslint": "^8.1.0",
-    "eslint-config-prettier": "^8.3.0",
-    "eslint-plugin-prettier": "^4.0.0",
-    "prettier": "^2.4.1",
-    "webpack-dev-server": "^4.4.0",
-    "wepback": "^1.0.0"
+    "babel-plugin-styled-components": "^1.13.3",
+    "dotenv-webpack": "^7.0.3",
+    "file-loader": "^6.2.0",
+    "fork-ts-checker-webpack-plugin": "^6.4.0",
+    "html-loader": "^3.0.1",
+    "typescript": "^4.4.4"
   }
 }
